<resources>
    <string name="app_name">BioGen</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="school">School</string>
    <string name="year_of_graduation">Year of Graduation</string>
    <string name="degree">Degree</string>
    <string name="create_your_bio">Create Your Bio!!</string>
    <string name="b_s">B.S</string>
    <string name="m_s">M.S</string>
    <string name="ph_d">Ph.D</string>
    <string name="bas">BAS</string>
    <string name="major">Major</string>
    <string name="favourite_activities">Favourite Activities</string>
    <string name="m_a">M.A</string>
    <string name="m_d">M.D</string>
    <string name="ba">BA</string>
    <string name="mfa">MFA</string>
    <string name="dds">DDS</string>
    <string name="bfa">BFA</string>
    <string name="mba">MBA</string>
    <string name="j_d">J.D</string>
    <string name="create">CREATE</string>
    <string name="clear_selection">Clear Selection</string>

    <string-array name="majors">
        <item>Choose a Major</item>
        <item>Computer Science</item>
        <item>Engineering</item>
        <item>Math</item>
        <item>Biology</item>
        <item>Education</item>
    </string-array>
</resources>